# src/auth/dto/test-req.dto.ts
@@ -13,3 +13,11 @@ export class TestChangeRoleDto {
 export class TestChangePasswordDto {
   password: string;
 }
+
+type KeyType = 'TEXT' | 'INT';
+
+export class TestJsonKeyDto {
+  idx: string;
+  keyName: string;
+  keyType: KeyType;
+}
